# Graph_Optimizor

./: .gitignore  CMakeLists.txt  README.md
log/: H_and_b.txt  first_step_cost_time_error.txt  iter_time_cost.txt
test/: Frame.hpp  ceres_basolver.hpp  compare_with_ceres.cpp  test_marginalize_invdep_oldest.cpp  test_marginalize_invdep_subnew.cpp  test_marginalize_pos.cpp  test_problem.cpp  test_solve_invdep.cpp  test_solve_pos.cpp  test_zero_noise.cpp
test/edges/: edge_reprojection_invdep.hpp  edge_reprojection_pos.hpp
test/vertices/: vertex_pose.hpp
